# axum-site-template

./: .gitignore  Cargo.toml  justfile  package-lock.json  package.json  tailwind.config.js
src/: main.rs
