[package]
name = "axum-site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
maud = { version = "0.25.0", features = ["axum"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tower-livereload = "0.8.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

